// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shallow render 1`] = `
<div
  className="flex-100 layout-row layout-wrap padd_top"
  name="cargoDetailsBox"
>
  <div
    className="flex-100 layout-row layout-align-center"
  >
    <div
      className="flex-none content_width layout-row layout-wrap"
    >
      <div
        className="flex-100 layout-row layout-align-space-between-center"
      >
        <div
          className="flex-45 layout-align-start-center layout-row"
        >
          <div
            className="flex-none"
          >
            <TextHeading
              color=""
              size={2}
              text="Cargo Details"
              theme={
                Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                }
              }
            />
          </div>
        </div>
        <div
          className="flex-45 layout-align-start-center layout-row"
        >
          <div
            className="flex-none"
          >
            <TextHeading
              color=""
              size={2}
              text="Shipment Documents "
              theme={
                Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                }
              }
            />
          </div>
          <div
            className="flex-none"
            style={
              Object {
                "marginLeft": "10px",
              }
            }
          >
            <p
              className="flex-none"
            >
              ( if available )
            </p>
          </div>
        </div>
      </div>
      <div
        className="flex-100 layout-row layout-wrap"
      >
        <div
          className="flex-100"
        >
           
          <div
            className="flex-none"
          >
            <TextHeading
              color=""
              size={3}
              text="Total value of goods"
              theme={
                Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                }
              }
            />
          </div>
        </div>
        <div
          className="flex-100 flex-gt-sm-50 layout-row layout-wrap layout-align-start-start"
        >
          <div
            className="flex-100 layout-row layout-wrap"
          >
            <div
              className="flex-100 layout-row"
            >
              <div
                className="flex-66 layout-row"
              >
                <Formsy(FormsyInput)
                  className="flex-100 cargo_input "
                  errorMessageStyles={
                    Object {
                      "bottom": "-17px",
                      "fontSize": "13px",
                    }
                  }
                  innerRef={[Function]}
                  name="totalGoodsValue"
                  onChange={[Function]}
                  required={true}
                  submitAttempted={false}
                  type="number"
                  validationError=""
                  validationErrors={
                    Object {
                      "isDefaultRequiredValue": "Must be greater than 0",
                      "nonNegative": "Must be greater than 0",
                    }
                  }
                  validations={
                    Object {
                      "nonNegative": [Function],
                    }
                  }
                  value={11}
                  wrapperClassName="flex-100 wrapper_cargo_input"
                />
              </div>
              <div
                className="flex-33 layout-row"
              >
                <NamedSelect
                  className="flex-100"
                  clearable={false}
                  onChange={[Function]}
                  options={
                    Array [
                      Object {
                        "label": "EUR",
                        "value": "EUR",
                      },
                      Object {
                        "label": "AUD",
                        "value": "AUD",
                      },
                      Object {
                        "label": "BGN",
                        "value": "BGN",
                      },
                      Object {
                        "label": "BRL",
                        "value": "BRL",
                      },
                      Object {
                        "label": "CAD",
                        "value": "CAD",
                      },
                      Object {
                        "label": "CHF",
                        "value": "CHF",
                      },
                      Object {
                        "label": "CNY",
                        "value": "CNY",
                      },
                      Object {
                        "label": "CZK",
                        "value": "CZK",
                      },
                      Object {
                        "label": "DKK",
                        "value": "DKK",
                      },
                      Object {
                        "label": "GBP",
                        "value": "GBP",
                      },
                      Object {
                        "label": "HKD",
                        "value": "HKD",
                      },
                      Object {
                        "label": "HRK",
                        "value": "HRK",
                      },
                      Object {
                        "label": "HUF",
                        "value": "HUF",
                      },
                      Object {
                        "label": "IDR",
                        "value": "IDR",
                      },
                      Object {
                        "label": "ILS",
                        "value": "ILS",
                      },
                      Object {
                        "label": "INR",
                        "value": "INR",
                      },
                      Object {
                        "label": "JPY",
                        "value": "JPY",
                      },
                      Object {
                        "label": "KRW",
                        "value": "KRW",
                      },
                      Object {
                        "label": "MXN",
                        "value": "MXN",
                      },
                      Object {
                        "label": "MYR",
                        "value": "MYR",
                      },
                      Object {
                        "label": "NOK",
                        "value": "NOK",
                      },
                      Object {
                        "label": "NZD",
                        "value": "NZD",
                      },
                      Object {
                        "label": "PHP",
                        "value": "PHP",
                      },
                      Object {
                        "label": "PLN",
                        "value": "PLN",
                      },
                      Object {
                        "label": "RON",
                        "value": "RON",
                      },
                      Object {
                        "label": "RUB",
                        "value": "RUB",
                      },
                      Object {
                        "label": "SEK",
                        "value": "SEK",
                      },
                      Object {
                        "label": "SGD",
                        "value": "SGD",
                      },
                      Object {
                        "label": "THB",
                        "value": "THB",
                      },
                      Object {
                        "label": "TRY",
                        "value": "TRY",
                      },
                      Object {
                        "label": "USD",
                        "value": "USD",
                      },
                      Object {
                        "label": "ZAR",
                        "value": "ZAR",
                      },
                    ]
                  }
                  value={
                    Object {
                      "label": "EUR",
                      "value": "EUR",
                    }
                  }
                />
              </div>
            </div>
          </div>
          <div
            className="flex-100 layout-row layout-wrap"
            id="cargo_notes"
          >
            <div
              className="flex-100"
            >
              <div
                className="flex-none f_header"
              >
                 
                <TextHeading
                  color=""
                  size={3}
                  text="Description of goods"
                  theme={
                    Object {
                      "colors": Object {
                        "primary": "#333",
                        "secondary": "#fafafa",
                      },
                    }
                  }
                />
              </div>
            </div>
            <div
              className="flex-100"
            >
              <Formsy(FormsyTextarea)
                className="flex-100 cargo_text_area "
                errorMessageStyles={
                  Object {
                    "bottom": "-17px",
                    "fontSize": "13px",
                  }
                }
                innerRef={[Function]}
                name="cargoNotes"
                onChange={[Function]}
                required={true}
                submitAttempted={false}
                type="textarea"
                validationError=""
                validationErrors={
                  Object {
                    "isDefaultRequiredValue": "Must not be empty",
                  }
                }
                validations={null}
                value="FOO_CARGO_NOTES"
                wrapperClassName="flex-100 wrapper_cargo_input"
              />
            </div>
          </div>
          <div
            className="flex-100 layout-row layout-align-start-start layout-wrap"
          >
            <div
              className="flex-100"
            >
              <div
                className="flex-none layout-row layout-wrap f_header"
              >
                 
                <h4
                  className="no_m flex-100"
                >
                  Incoterms
                </h4>
                <p
                  className="flex-90"
                >
                  2010 by the International Chamber of Commerce (ICC) (Optional)
                </p>
              </div>
            </div>
            <div
              className="flex-100 layout-row layout-align-start-start input_box_full"
            >
              <textarea
                className="textarea_incoterm"
                cols="30"
                id=""
                name="incotermText"
                onChange={[Function]}
                rows="6"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          className="flex-100 flex-gt-sm-45 offset-gt-sm-5 layout-row layout-wrap layout-align-start-start"
        >
          <div
            className="flex-100 layout-row layout-wrap"
            name="packing_sheet"
          >
            <div
              className="flex-100 layout-row"
            >
              <DocumentsForm
                deleteFn={[Function]}
                dispatchFn={[Function]}
                displayOnly={false}
                doc={Object {}}
                isRequired={true}
                multiple={false}
                text="Packing Sheet"
                theme={
                  Object {
                    "colors": Object {
                      "primary": "#333",
                      "secondary": "#fafafa",
                    },
                  }
                }
                tooltip=""
                type="packing_sheet"
                uploadFn={null}
                viewer={false}
              />
            </div>
          </div>
          <div
            className="flex-100 layout-row layout-wrap"
            name="commercial_invoice"
          >
            <div
              className="flex-100 layout-row"
            >
              <DocumentsForm
                deleteFn={[Function]}
                dispatchFn={[Function]}
                displayOnly={false}
                doc={Object {}}
                isRequired={true}
                multiple={false}
                text="Commercial Invoice"
                theme={
                  Object {
                    "colors": Object {
                      "primary": "#333",
                      "secondary": "#fafafa",
                    },
                  }
                }
                tooltip=""
                type="commercial_invoice"
                uploadFn={null}
                viewer={false}
              />
            </div>
          </div>
          <div
            className="flex-100 layout-row layout-align-start-start layout-wrap"
          >
            <div
              className="flex-100 layout-row layout-align-start-start layout-wrap"
            >
              <div
                className="flex-100"
              >
                <div
                  className="flex-none f_header"
                >
                   
                  <TextHeading
                    color=""
                    size={3}
                    text="Notes (Optional)"
                    theme={
                      Object {
                        "colors": Object {
                          "primary": "#333",
                          "secondary": "#fafafa",
                        },
                      }
                    }
                  />
                </div>
              </div>
              <div
                className="flex-100 layout-row layout-align-start-start input_box_full"
              >
                <textarea
                  className="textarea_margin"
                  cols="30"
                  id=""
                  name="notes"
                  onChange={[Function]}
                  rows="6"
                  value="FOO_NOTES"
                />
              </div>
            </div>
            <div
              className="flex-gt-sm-100 layout-row layout-align-start-start layout-wrap"
            >
              <div
                className=" flex-100 layout-row layout-align-start-start-space-around layout-wrap"
              >
                <DocumentsMultiForm
                  deleteFn={[Function]}
                  dispatchFn={[Function]}
                  documents={Array []}
                  text="Miscellaneous"
                  theme={
                    Object {
                      "colors": Object {
                        "primary": "#333",
                        "secondary": "#fafafa",
                      },
                    }
                  }
                  tooltip=""
                  type="miscellaneous"
                  uploadFn={null}
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`shipmentData.dangerousGoods is true 1`] = `
<div
  className="flex-100 layout-row layout-wrap padd_top"
  name="cargoDetailsBox"
>
  <div
    className="flex-100 layout-row layout-align-center"
  >
    <div
      className="flex-none content_width layout-row layout-wrap"
    >
      <div
        className="flex-100 layout-row layout-align-space-between-center"
      >
        <div
          className="flex-45 layout-align-start-center layout-row"
        >
          <div
            className="flex-none"
          >
            <TextHeading
              color=""
              size={2}
              text="Cargo Details"
              theme={
                Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                }
              }
            />
          </div>
        </div>
        <div
          className="flex-45 layout-align-start-center layout-row"
        >
          <div
            className="flex-none"
          >
            <TextHeading
              color=""
              size={2}
              text="Shipment Documents "
              theme={
                Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                }
              }
            />
          </div>
          <div
            className="flex-none"
            style={
              Object {
                "marginLeft": "10px",
              }
            }
          >
            <p
              className="flex-none"
            >
              ( if available )
            </p>
          </div>
        </div>
      </div>
      <div
        className="flex-100 layout-row layout-wrap"
      >
        <div
          className="flex-100"
        >
           
          <div
            className="flex-none"
          >
            <TextHeading
              color=""
              size={3}
              text="Total value of goods"
              theme={
                Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                }
              }
            />
          </div>
        </div>
        <div
          className="flex-100 flex-gt-sm-50 layout-row layout-wrap layout-align-start-start"
        >
          <div
            className="flex-100 layout-row layout-wrap"
          >
            <div
              className="flex-100 layout-row"
            >
              <div
                className="flex-66 layout-row"
              >
                <Formsy(FormsyInput)
                  className="flex-100 cargo_input "
                  errorMessageStyles={
                    Object {
                      "bottom": "-17px",
                      "fontSize": "13px",
                    }
                  }
                  innerRef={[Function]}
                  name="totalGoodsValue"
                  onChange={[Function]}
                  required={true}
                  submitAttempted={false}
                  type="number"
                  validationError=""
                  validationErrors={
                    Object {
                      "isDefaultRequiredValue": "Must be greater than 0",
                      "nonNegative": "Must be greater than 0",
                    }
                  }
                  validations={
                    Object {
                      "nonNegative": [Function],
                    }
                  }
                  value={11}
                  wrapperClassName="flex-100 wrapper_cargo_input"
                />
              </div>
              <div
                className="flex-33 layout-row"
              >
                <NamedSelect
                  className="flex-100"
                  clearable={false}
                  onChange={[Function]}
                  options={
                    Array [
                      Object {
                        "label": "EUR",
                        "value": "EUR",
                      },
                      Object {
                        "label": "AUD",
                        "value": "AUD",
                      },
                      Object {
                        "label": "BGN",
                        "value": "BGN",
                      },
                      Object {
                        "label": "BRL",
                        "value": "BRL",
                      },
                      Object {
                        "label": "CAD",
                        "value": "CAD",
                      },
                      Object {
                        "label": "CHF",
                        "value": "CHF",
                      },
                      Object {
                        "label": "CNY",
                        "value": "CNY",
                      },
                      Object {
                        "label": "CZK",
                        "value": "CZK",
                      },
                      Object {
                        "label": "DKK",
                        "value": "DKK",
                      },
                      Object {
                        "label": "GBP",
                        "value": "GBP",
                      },
                      Object {
                        "label": "HKD",
                        "value": "HKD",
                      },
                      Object {
                        "label": "HRK",
                        "value": "HRK",
                      },
                      Object {
                        "label": "HUF",
                        "value": "HUF",
                      },
                      Object {
                        "label": "IDR",
                        "value": "IDR",
                      },
                      Object {
                        "label": "ILS",
                        "value": "ILS",
                      },
                      Object {
                        "label": "INR",
                        "value": "INR",
                      },
                      Object {
                        "label": "JPY",
                        "value": "JPY",
                      },
                      Object {
                        "label": "KRW",
                        "value": "KRW",
                      },
                      Object {
                        "label": "MXN",
                        "value": "MXN",
                      },
                      Object {
                        "label": "MYR",
                        "value": "MYR",
                      },
                      Object {
                        "label": "NOK",
                        "value": "NOK",
                      },
                      Object {
                        "label": "NZD",
                        "value": "NZD",
                      },
                      Object {
                        "label": "PHP",
                        "value": "PHP",
                      },
                      Object {
                        "label": "PLN",
                        "value": "PLN",
                      },
                      Object {
                        "label": "RON",
                        "value": "RON",
                      },
                      Object {
                        "label": "RUB",
                        "value": "RUB",
                      },
                      Object {
                        "label": "SEK",
                        "value": "SEK",
                      },
                      Object {
                        "label": "SGD",
                        "value": "SGD",
                      },
                      Object {
                        "label": "THB",
                        "value": "THB",
                      },
                      Object {
                        "label": "TRY",
                        "value": "TRY",
                      },
                      Object {
                        "label": "USD",
                        "value": "USD",
                      },
                      Object {
                        "label": "ZAR",
                        "value": "ZAR",
                      },
                    ]
                  }
                  value={
                    Object {
                      "label": "EUR",
                      "value": "EUR",
                    }
                  }
                />
              </div>
            </div>
          </div>
          <div
            className="flex-100 layout-row layout-wrap"
            id="cargo_notes"
          >
            <div
              className="flex-100"
            >
              <div
                className="flex-none f_header"
              >
                 
                <TextHeading
                  color=""
                  size={3}
                  text="Description of goods"
                  theme={
                    Object {
                      "colors": Object {
                        "primary": "#333",
                        "secondary": "#fafafa",
                      },
                    }
                  }
                />
              </div>
            </div>
            <div
              className="flex-100"
            >
              <Formsy(FormsyTextarea)
                className="flex-100 cargo_text_area "
                errorMessageStyles={
                  Object {
                    "bottom": "-17px",
                    "fontSize": "13px",
                  }
                }
                innerRef={[Function]}
                name="cargoNotes"
                onChange={[Function]}
                required={true}
                submitAttempted={false}
                type="textarea"
                validationError=""
                validationErrors={
                  Object {
                    "isDefaultRequiredValue": "Must not be empty",
                  }
                }
                validations={null}
                value="FOO_CARGO_NOTES"
                wrapperClassName="flex-100 wrapper_cargo_input"
              />
            </div>
          </div>
          <div
            className="flex-100 layout-row layout-align-start-start layout-wrap"
          >
            <div
              className="flex-100"
            >
              <div
                className="flex-none layout-row layout-wrap f_header"
              >
                 
                <h4
                  className="no_m flex-100"
                >
                  Incoterms
                </h4>
                <p
                  className="flex-90"
                >
                  2010 by the International Chamber of Commerce (ICC) (Optional)
                </p>
              </div>
            </div>
            <div
              className="flex-100 layout-row layout-align-start-start input_box_full"
            >
              <textarea
                className="textarea_incoterm"
                cols="30"
                id=""
                name="incotermText"
                onChange={[Function]}
                rows="6"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          className="flex-100 flex-gt-sm-45 offset-gt-sm-5 layout-row layout-wrap layout-align-start-start"
        >
          <div
            className="flex-100 layout-row layout-wrap"
            name="packing_sheet"
          >
            <div
              className="flex-100 layout-row"
            >
              <DocumentsForm
                deleteFn={[Function]}
                dispatchFn={[Function]}
                displayOnly={false}
                doc={Object {}}
                isRequired={true}
                multiple={false}
                text="Packing Sheet"
                theme={
                  Object {
                    "colors": Object {
                      "primary": "#333",
                      "secondary": "#fafafa",
                    },
                  }
                }
                tooltip=""
                type="packing_sheet"
                uploadFn={null}
                viewer={false}
              />
            </div>
          </div>
          <div
            className="flex-100 layout-row layout-wrap"
            name="commercial_invoice"
          >
            <div
              className="flex-100 layout-row"
            >
              <DocumentsForm
                deleteFn={[Function]}
                dispatchFn={[Function]}
                displayOnly={false}
                doc={Object {}}
                isRequired={true}
                multiple={false}
                text="Commercial Invoice"
                theme={
                  Object {
                    "colors": Object {
                      "primary": "#333",
                      "secondary": "#fafafa",
                    },
                  }
                }
                tooltip=""
                type="commercial_invoice"
                uploadFn={null}
                viewer={false}
              />
            </div>
          </div>
          <div
            className="flex-100 layout-row layout-wrap"
          >
            <div
              className="flex-100 layout-row layout-wrap"
            >
              <DocumentsForm
                deleteFn={[Function]}
                dispatchFn={[Function]}
                displayOnly={false}
                doc={Object {}}
                isRequired={false}
                multiple={false}
                text="Dangerous Goods"
                theme={
                  Object {
                    "colors": Object {
                      "primary": "#333",
                      "secondary": "#fafafa",
                    },
                  }
                }
                tooltip=""
                type="dangerous_goods"
                uploadFn={null}
                viewer={false}
              />
            </div>
          </div>
          <div
            className="flex-100 layout-row layout-align-start-start layout-wrap"
          >
            <div
              className="flex-100 layout-row layout-align-start-start layout-wrap"
            >
              <div
                className="flex-100"
              >
                <div
                  className="flex-none f_header"
                >
                   
                  <TextHeading
                    color=""
                    size={3}
                    text="Notes (Optional)"
                    theme={
                      Object {
                        "colors": Object {
                          "primary": "#333",
                          "secondary": "#fafafa",
                        },
                      }
                    }
                  />
                </div>
              </div>
              <div
                className="flex-100 layout-row layout-align-start-start input_box_full"
              >
                <textarea
                  className="textarea_margin"
                  cols="30"
                  id=""
                  name="notes"
                  onChange={[Function]}
                  rows="6"
                  value="FOO_NOTES"
                />
              </div>
            </div>
            <div
              className="flex-gt-sm-100 layout-row layout-align-start-start layout-wrap"
            >
              <div
                className=" flex-100 layout-row layout-align-start-start-space-around layout-wrap"
              >
                <DocumentsMultiForm
                  deleteFn={[Function]}
                  dispatchFn={[Function]}
                  documents={Array []}
                  text="Miscellaneous"
                  theme={
                    Object {
                      "colors": Object {
                        "primary": "#333",
                        "secondary": "#fafafa",
                      },
                    }
                  }
                  tooltip=""
                  type="miscellaneous"
                  uploadFn={null}
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`tenant.data.scope.has_insurance is true 1`] = `
<div
  className="flex-100 layout-row layout-wrap padd_top"
  name="cargoDetailsBox"
>
  <div
    className="flex-100 layout-row layout-align-center"
  >
    <div
      className="flex-none content_width layout-row layout-wrap"
    >
      <div
        className="flex-100 layout-row layout-align-space-between-center"
      >
        <div
          className="flex-45 layout-align-start-center layout-row"
        >
          <div
            className="flex-none"
          >
            <TextHeading
              color=""
              size={2}
              text="Cargo Details"
              theme={
                Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                }
              }
            />
          </div>
        </div>
        <div
          className="flex-45 layout-align-start-center layout-row"
        >
          <div
            className="flex-none"
          >
            <TextHeading
              color=""
              size={2}
              text="Shipment Documents "
              theme={
                Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                }
              }
            />
          </div>
          <div
            className="flex-none"
            style={
              Object {
                "marginLeft": "10px",
              }
            }
          >
            <p
              className="flex-none"
            >
              ( if available )
            </p>
          </div>
        </div>
      </div>
      <div
        className="flex-100 layout-row layout-wrap"
      >
        <div
          className="flex-100"
        >
           
          <div
            className="flex-none"
          >
            <TextHeading
              color=""
              size={3}
              text="Total value of goods"
              theme={
                Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                }
              }
            />
          </div>
        </div>
        <div
          className="flex-100 flex-gt-sm-50 layout-row layout-wrap layout-align-start-start"
        >
          <div
            className="flex-100 layout-row layout-wrap"
          >
            <div
              className="flex-100 layout-row"
            >
              <div
                className="flex-66 layout-row"
              >
                <Formsy(FormsyInput)
                  className="flex-100 cargo_input "
                  errorMessageStyles={
                    Object {
                      "bottom": "-17px",
                      "fontSize": "13px",
                    }
                  }
                  innerRef={[Function]}
                  name="totalGoodsValue"
                  onChange={[Function]}
                  required={true}
                  submitAttempted={false}
                  type="number"
                  validationError=""
                  validationErrors={
                    Object {
                      "isDefaultRequiredValue": "Must be greater than 0",
                      "nonNegative": "Must be greater than 0",
                    }
                  }
                  validations={
                    Object {
                      "nonNegative": [Function],
                    }
                  }
                  value={11}
                  wrapperClassName="flex-100 wrapper_cargo_input"
                />
              </div>
              <div
                className="flex-33 layout-row"
              >
                <NamedSelect
                  className="flex-100"
                  clearable={false}
                  onChange={[Function]}
                  options={
                    Array [
                      Object {
                        "label": "EUR",
                        "value": "EUR",
                      },
                      Object {
                        "label": "AUD",
                        "value": "AUD",
                      },
                      Object {
                        "label": "BGN",
                        "value": "BGN",
                      },
                      Object {
                        "label": "BRL",
                        "value": "BRL",
                      },
                      Object {
                        "label": "CAD",
                        "value": "CAD",
                      },
                      Object {
                        "label": "CHF",
                        "value": "CHF",
                      },
                      Object {
                        "label": "CNY",
                        "value": "CNY",
                      },
                      Object {
                        "label": "CZK",
                        "value": "CZK",
                      },
                      Object {
                        "label": "DKK",
                        "value": "DKK",
                      },
                      Object {
                        "label": "GBP",
                        "value": "GBP",
                      },
                      Object {
                        "label": "HKD",
                        "value": "HKD",
                      },
                      Object {
                        "label": "HRK",
                        "value": "HRK",
                      },
                      Object {
                        "label": "HUF",
                        "value": "HUF",
                      },
                      Object {
                        "label": "IDR",
                        "value": "IDR",
                      },
                      Object {
                        "label": "ILS",
                        "value": "ILS",
                      },
                      Object {
                        "label": "INR",
                        "value": "INR",
                      },
                      Object {
                        "label": "JPY",
                        "value": "JPY",
                      },
                      Object {
                        "label": "KRW",
                        "value": "KRW",
                      },
                      Object {
                        "label": "MXN",
                        "value": "MXN",
                      },
                      Object {
                        "label": "MYR",
                        "value": "MYR",
                      },
                      Object {
                        "label": "NOK",
                        "value": "NOK",
                      },
                      Object {
                        "label": "NZD",
                        "value": "NZD",
                      },
                      Object {
                        "label": "PHP",
                        "value": "PHP",
                      },
                      Object {
                        "label": "PLN",
                        "value": "PLN",
                      },
                      Object {
                        "label": "RON",
                        "value": "RON",
                      },
                      Object {
                        "label": "RUB",
                        "value": "RUB",
                      },
                      Object {
                        "label": "SEK",
                        "value": "SEK",
                      },
                      Object {
                        "label": "SGD",
                        "value": "SGD",
                      },
                      Object {
                        "label": "THB",
                        "value": "THB",
                      },
                      Object {
                        "label": "TRY",
                        "value": "TRY",
                      },
                      Object {
                        "label": "USD",
                        "value": "USD",
                      },
                      Object {
                        "label": "ZAR",
                        "value": "ZAR",
                      },
                    ]
                  }
                  value={
                    Object {
                      "label": "EUR",
                      "value": "EUR",
                    }
                  }
                />
              </div>
            </div>
          </div>
          <div
            className="flex-100 layout-row layout-wrap"
            id="cargo_notes"
          >
            <div
              className="flex-100"
            >
              <div
                className="flex-none f_header"
              >
                 
                <TextHeading
                  color=""
                  size={3}
                  text="Description of goods"
                  theme={
                    Object {
                      "colors": Object {
                        "primary": "#333",
                        "secondary": "#fafafa",
                      },
                    }
                  }
                />
              </div>
            </div>
            <div
              className="flex-100"
            >
              <Formsy(FormsyTextarea)
                className="flex-100 cargo_text_area "
                errorMessageStyles={
                  Object {
                    "bottom": "-17px",
                    "fontSize": "13px",
                  }
                }
                innerRef={[Function]}
                name="cargoNotes"
                onChange={[Function]}
                required={true}
                submitAttempted={false}
                type="textarea"
                validationError=""
                validationErrors={
                  Object {
                    "isDefaultRequiredValue": "Must not be empty",
                  }
                }
                validations={null}
                value="FOO_CARGO_NOTES"
                wrapperClassName="flex-100 wrapper_cargo_input"
              />
            </div>
          </div>
          <div
            className="flex-100 layout-row layout-align-start-start layout-wrap"
          >
            <div
              className="flex-100"
            >
              <div
                className="flex-none layout-row layout-wrap f_header"
              >
                 
                <h4
                  className="no_m flex-100"
                >
                  Incoterms
                </h4>
                <p
                  className="flex-90"
                >
                  2010 by the International Chamber of Commerce (ICC) (Optional)
                </p>
              </div>
            </div>
            <div
              className="flex-100 layout-row layout-align-start-start input_box_full"
            >
              <textarea
                className="textarea_incoterm"
                cols="30"
                id=""
                name="incotermText"
                onChange={[Function]}
                rows="6"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          className="flex-100 flex-gt-sm-45 offset-gt-sm-5 layout-row layout-wrap layout-align-start-start"
        >
          <div
            className="flex-100 layout-row layout-wrap"
            name="packing_sheet"
          >
            <div
              className="flex-100 layout-row"
            >
              <DocumentsForm
                deleteFn={[Function]}
                dispatchFn={[Function]}
                displayOnly={false}
                doc={Object {}}
                isRequired={true}
                multiple={false}
                text="Packing Sheet"
                theme={
                  Object {
                    "colors": Object {
                      "primary": "#333",
                      "secondary": "#fafafa",
                    },
                  }
                }
                tooltip=""
                type="packing_sheet"
                uploadFn={null}
                viewer={false}
              />
            </div>
          </div>
          <div
            className="flex-100 layout-row layout-wrap"
            name="commercial_invoice"
          >
            <div
              className="flex-100 layout-row"
            >
              <DocumentsForm
                deleteFn={[Function]}
                dispatchFn={[Function]}
                displayOnly={false}
                doc={Object {}}
                isRequired={true}
                multiple={false}
                text="Commercial Invoice"
                theme={
                  Object {
                    "colors": Object {
                      "primary": "#333",
                      "secondary": "#fafafa",
                    },
                  }
                }
                tooltip=""
                type="commercial_invoice"
                uploadFn={null}
                viewer={false}
              />
            </div>
          </div>
          <div
            className="flex-100 layout-row layout-align-start-start layout-wrap"
          >
            <div
              className="flex-100 layout-row layout-align-start-start layout-wrap"
            >
              <div
                className="flex-100"
              >
                <div
                  className="flex-none f_header"
                >
                   
                  <TextHeading
                    color=""
                    size={3}
                    text="Notes (Optional)"
                    theme={
                      Object {
                        "colors": Object {
                          "primary": "#333",
                          "secondary": "#fafafa",
                        },
                      }
                    }
                  />
                </div>
              </div>
              <div
                className="flex-100 layout-row layout-align-start-start input_box_full"
              >
                <textarea
                  className="textarea_margin"
                  cols="30"
                  id=""
                  name="notes"
                  onChange={[Function]}
                  rows="6"
                  value="FOO_NOTES"
                />
              </div>
            </div>
            <div
              className="flex-gt-sm-100 layout-row layout-align-start-start layout-wrap"
            >
              <div
                className=" flex-100 layout-row layout-align-start-start-space-around layout-wrap"
              >
                <DocumentsMultiForm
                  deleteFn={[Function]}
                  dispatchFn={[Function]}
                  documents={Array []}
                  text="Miscellaneous"
                  theme={
                    Object {
                      "colors": Object {
                        "primary": "#333",
                        "secondary": "#fafafa",
                      },
                    }
                  }
                  tooltip=""
                  type="miscellaneous"
                  uploadFn={null}
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="insurance_customs_sec flex-100 layout-row layout-wrap layout-align-center"
  >
    <div
      className="flex-100 layout-row layout-align-center padd_top"
    >
      <div
        className="flex-none content_width layout-row layout-wrap section_padding"
      >
        <div
          className="flex-100 layout-row layout-align-space-between-start"
        >
          <div
            className="flex-none layout-row layout-align-space-around-center"
          >
            <TextHeading
              color=""
              size={2}
              text="Insurance"
              theme={
                Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                }
              }
            />
          </div>
          <div
            className="flex-33 layout-row layout-align-space-around-center layout-wrap"
          >
            <div
              className="flex-100 layout-row layout-wrap layout-align-end-center"
            >
              <div
                className="flex-90 layout-row layout-align-start-center"
              >
                <p
                  className="flex-none layout-align-start-center"
                >
                  Yes, I want undefined to quote insurance for my cargo
                </p>
              </div>
              <div
                className="flex-10 layout-row layout-align-end-center"
              >
                <Checkbox
                  checked={true}
                  className=""
                  disabled={false}
                  onChange={[Function]}
                  onClick={null}
                  size={null}
                  theme={
                    Object {
                      "colors": Object {
                        "primary": "#333",
                        "secondary": "#fafafa",
                      },
                    }
                  }
                />
              </div>
            </div>
            <div
              className="flex-100 layout-row layout-align-end-center"
            >
              <div
                className="flex-90 layout-row layout-align-start-center"
              >
                <p
                  className="flex-none"
                  style={
                    Object {
                      "marginRight": "5px",
                    }
                  }
                >
                  No, I do not want undefined to quote insurance for my cargo
                </p>
              </div>
              <div
                className="flex-10 layout-row layout-align-end-center"
              >
                <Checkbox
                  checked={false}
                  className=""
                  disabled={false}
                  onChange={[Function]}
                  onClick={null}
                  size={null}
                  theme={
                    Object {
                      "colors": Object {
                        "primary": "#333",
                        "secondary": "#fafafa",
                      },
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
        <div
          className="flex-100 layout-row layout-align-start-center"
        >
          <p
            className="flex-100"
          >
            <b>
              Cargo Insurance provides cover on all risk terms for physical loss or damage to cargo during transport by land, sea or air.
            </b>
          </p>
        </div>
        <div
          className="flex-100 layout-row layout-align-start-center"
        >
          <p
            className="flex-100"
          >
            <b>
              Insurance is a cost effective and simple way to cover for physical loss or damage to goods in transit.
            </b>
          </p>
        </div>
        <div
          className="flex-100 layout-row  box_content show"
        >
          <div
            className="flex-80 layout-row layout-wrap"
          >
            <p
              className="flex-90"
            >
              <strong>
                 
                A cost effective and simple way to cover for physical loss or damage to goods in transit.
              </strong>
            </p>
            <p
              className="flex-90"
            >
              Please contact your local undefined office for more info.
            </p>
          </div>
        </div>
        <div
          className="flex-100 layout-row layout-align-start-center"
        >
          <div
            className="flex-none layout-row layout-align-center-center"
            onClick={[Function]}
          >
            <p
              className="flex-none pointy"
            >
              Read more...
            </p>
            <i
              className="flex-none offset-5 fa fa-external-link"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`totalGoodsValue.value > 20000 1`] = `
<div
  className="flex-100 layout-row layout-wrap padd_top"
  name="cargoDetailsBox"
>
  <div
    className="flex-100 layout-row layout-align-center"
  >
    <div
      className="flex-none content_width layout-row layout-wrap"
    >
      <div
        className="flex-100 layout-row layout-align-space-between-center"
      >
        <div
          className="flex-45 layout-align-start-center layout-row"
        >
          <div
            className="flex-none"
          >
            <TextHeading
              color=""
              size={2}
              text="Cargo Details"
              theme={
                Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                }
              }
            />
          </div>
        </div>
        <div
          className="flex-45 layout-align-start-center layout-row"
        >
          <div
            className="flex-none"
          >
            <TextHeading
              color=""
              size={2}
              text="Shipment Documents "
              theme={
                Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                }
              }
            />
          </div>
          <div
            className="flex-none"
            style={
              Object {
                "marginLeft": "10px",
              }
            }
          >
            <p
              className="flex-none"
            >
              ( if available )
            </p>
          </div>
        </div>
      </div>
      <div
        className="flex-100 layout-row layout-wrap"
      >
        <div
          className="flex-100"
        >
           
          <div
            className="flex-none"
          >
            <TextHeading
              color=""
              size={3}
              text="Total value of goods"
              theme={
                Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                }
              }
            />
          </div>
        </div>
        <div
          className="flex-100 flex-gt-sm-50 layout-row layout-wrap layout-align-start-start"
        >
          <div
            className="flex-100 layout-row layout-wrap"
          >
            <div
              className="flex-100 layout-row"
            >
              <div
                className="flex-66 layout-row"
              >
                <Formsy(FormsyInput)
                  className="flex-100 cargo_input "
                  errorMessageStyles={
                    Object {
                      "bottom": "-17px",
                      "fontSize": "13px",
                    }
                  }
                  innerRef={[Function]}
                  name="totalGoodsValue"
                  onChange={[Function]}
                  required={true}
                  submitAttempted={false}
                  type="number"
                  validationError=""
                  validationErrors={
                    Object {
                      "isDefaultRequiredValue": "Must be greater than 0",
                      "nonNegative": "Must be greater than 0",
                    }
                  }
                  validations={
                    Object {
                      "nonNegative": [Function],
                    }
                  }
                  value={20001}
                  wrapperClassName="flex-100 wrapper_cargo_input"
                />
              </div>
              <div
                className="flex-33 layout-row"
              >
                <NamedSelect
                  className="flex-100"
                  clearable={false}
                  onChange={[Function]}
                  options={
                    Array [
                      Object {
                        "label": "EUR",
                        "value": "EUR",
                      },
                      Object {
                        "label": "AUD",
                        "value": "AUD",
                      },
                      Object {
                        "label": "BGN",
                        "value": "BGN",
                      },
                      Object {
                        "label": "BRL",
                        "value": "BRL",
                      },
                      Object {
                        "label": "CAD",
                        "value": "CAD",
                      },
                      Object {
                        "label": "CHF",
                        "value": "CHF",
                      },
                      Object {
                        "label": "CNY",
                        "value": "CNY",
                      },
                      Object {
                        "label": "CZK",
                        "value": "CZK",
                      },
                      Object {
                        "label": "DKK",
                        "value": "DKK",
                      },
                      Object {
                        "label": "GBP",
                        "value": "GBP",
                      },
                      Object {
                        "label": "HKD",
                        "value": "HKD",
                      },
                      Object {
                        "label": "HRK",
                        "value": "HRK",
                      },
                      Object {
                        "label": "HUF",
                        "value": "HUF",
                      },
                      Object {
                        "label": "IDR",
                        "value": "IDR",
                      },
                      Object {
                        "label": "ILS",
                        "value": "ILS",
                      },
                      Object {
                        "label": "INR",
                        "value": "INR",
                      },
                      Object {
                        "label": "JPY",
                        "value": "JPY",
                      },
                      Object {
                        "label": "KRW",
                        "value": "KRW",
                      },
                      Object {
                        "label": "MXN",
                        "value": "MXN",
                      },
                      Object {
                        "label": "MYR",
                        "value": "MYR",
                      },
                      Object {
                        "label": "NOK",
                        "value": "NOK",
                      },
                      Object {
                        "label": "NZD",
                        "value": "NZD",
                      },
                      Object {
                        "label": "PHP",
                        "value": "PHP",
                      },
                      Object {
                        "label": "PLN",
                        "value": "PLN",
                      },
                      Object {
                        "label": "RON",
                        "value": "RON",
                      },
                      Object {
                        "label": "RUB",
                        "value": "RUB",
                      },
                      Object {
                        "label": "SEK",
                        "value": "SEK",
                      },
                      Object {
                        "label": "SGD",
                        "value": "SGD",
                      },
                      Object {
                        "label": "THB",
                        "value": "THB",
                      },
                      Object {
                        "label": "TRY",
                        "value": "TRY",
                      },
                      Object {
                        "label": "USD",
                        "value": "USD",
                      },
                      Object {
                        "label": "ZAR",
                        "value": "ZAR",
                      },
                    ]
                  }
                  value={
                    Object {
                      "label": "EUR",
                      "value": "EUR",
                    }
                  }
                />
              </div>
            </div>
          </div>
          <div
            className="flex-100 layout-row layout-wrap"
            id="cargo_notes"
          >
            <div
              className="flex-100"
            >
              <div
                className="flex-none f_header"
              >
                 
                <TextHeading
                  color=""
                  size={3}
                  text="Description of goods"
                  theme={
                    Object {
                      "colors": Object {
                        "primary": "#333",
                        "secondary": "#fafafa",
                      },
                    }
                  }
                />
              </div>
            </div>
            <div
              className="flex-100"
            >
              <Formsy(FormsyTextarea)
                className="flex-100 cargo_text_area "
                errorMessageStyles={
                  Object {
                    "bottom": "-17px",
                    "fontSize": "13px",
                  }
                }
                innerRef={[Function]}
                name="cargoNotes"
                onChange={[Function]}
                required={true}
                submitAttempted={false}
                type="textarea"
                validationError=""
                validationErrors={
                  Object {
                    "isDefaultRequiredValue": "Must not be empty",
                  }
                }
                validations={null}
                value="FOO_CARGO_NOTES"
                wrapperClassName="flex-100 wrapper_cargo_input"
              />
            </div>
          </div>
          <div
            className="flex-100 layout-row layout-align-start-start layout-wrap"
          >
            <div
              className="flex-100"
            >
              <div
                className="flex-none layout-row layout-wrap f_header"
              >
                 
                <h4
                  className="no_m flex-100"
                >
                  Incoterms
                </h4>
                <p
                  className="flex-90"
                >
                  2010 by the International Chamber of Commerce (ICC) (Optional)
                </p>
              </div>
            </div>
            <div
              className="flex-100 layout-row layout-align-start-start input_box_full"
            >
              <textarea
                className="textarea_incoterm"
                cols="30"
                id=""
                name="incotermText"
                onChange={[Function]}
                rows="6"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          className="flex-100 flex-gt-sm-45 offset-gt-sm-5 layout-row layout-wrap layout-align-start-start"
        >
          <div
            className="flex-100 layout-row layout-wrap"
            name="packing_sheet"
          >
            <div
              className="flex-100 layout-row"
            >
              <DocumentsForm
                deleteFn={[Function]}
                dispatchFn={[Function]}
                displayOnly={false}
                doc={Object {}}
                isRequired={true}
                multiple={false}
                text="Packing Sheet"
                theme={
                  Object {
                    "colors": Object {
                      "primary": "#333",
                      "secondary": "#fafafa",
                    },
                  }
                }
                tooltip=""
                type="packing_sheet"
                uploadFn={null}
                viewer={false}
              />
            </div>
          </div>
          <div
            className="flex-100 layout-row layout-wrap"
            name="commercial_invoice"
          >
            <div
              className="flex-100 layout-row"
            >
              <DocumentsForm
                deleteFn={[Function]}
                dispatchFn={[Function]}
                displayOnly={false}
                doc={Object {}}
                isRequired={true}
                multiple={false}
                text="Commercial Invoice"
                theme={
                  Object {
                    "colors": Object {
                      "primary": "#333",
                      "secondary": "#fafafa",
                    },
                  }
                }
                tooltip=""
                type="commercial_invoice"
                uploadFn={null}
                viewer={false}
              />
            </div>
          </div>
          <div
            className="flex-100 layout-row layout-align-start-start layout-wrap"
          >
            <div
              className="flex-100 layout-row layout-align-start-start layout-wrap"
            >
              <div
                className="flex-100"
              >
                <div
                  className="flex-none f_header"
                >
                   
                  <TextHeading
                    color=""
                    size={3}
                    text="Notes (Optional)"
                    theme={
                      Object {
                        "colors": Object {
                          "primary": "#333",
                          "secondary": "#fafafa",
                        },
                      }
                    }
                  />
                </div>
              </div>
              <div
                className="flex-100 layout-row layout-align-start-start input_box_full"
              >
                <textarea
                  className="textarea_margin"
                  cols="30"
                  id=""
                  name="notes"
                  onChange={[Function]}
                  rows="6"
                  value="FOO_NOTES"
                />
              </div>
            </div>
            <div
              className="flex-gt-sm-100 layout-row layout-align-start-start layout-wrap"
            >
              <div
                className=" flex-100 layout-row layout-align-start-start-space-around layout-wrap"
              >
                <DocumentsMultiForm
                  deleteFn={[Function]}
                  dispatchFn={[Function]}
                  documents={Array []}
                  text="Miscellaneous"
                  theme={
                    Object {
                      "colors": Object {
                        "primary": "#333",
                        "secondary": "#fafafa",
                      },
                    }
                  }
                  tooltip=""
                  type="miscellaneous"
                  uploadFn={null}
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
